removed linkedin; made inquiry form use mailto due to outage; removed some error with comm links; fixed form button alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ TABLE OF CONTENTS:
     --primary-light: #002c55;
     --primary-dark: #001b35;
     --accent: #1A5288;
-    --accent-light: #216aaf;
+    --accent-light: rgba(33, 106, 175, 0.98);
     --accent-dark: #11365a;
 
     --white: #ffffff;
@@ -257,8 +257,8 @@ section {
 
 .cta-btn.secondary {
     background-color: transparent;
-    color: var(--primary-color);
-    border: 2px solid var(--primary-color);
+    color: white;
+    border: 2px solid white;
 }
 
 .cta-btn.secondary:hover, .cta-btn.secondary:focus {
@@ -525,17 +525,15 @@ section {
 }
 
 .hero-stats {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    gap: var(--spacing-2xl);
+    gap: var(--spacing-xl);
     margin-bottom: var(--spacing-2xl);
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 
 .stat {
     text-align: center;
+
 }
 
 .stat-number {
@@ -548,7 +546,7 @@ section {
 
 .stat-label {
     font-size: 0.875rem;
-    color: var(--gray-500);
+    color: var(--gray-100);
     text-transform: uppercase;
     letter-spacing: 1px;
 }
@@ -681,7 +679,7 @@ section {
 }
 
 .prompt {
-    color: var(--accent-light);
+    color: rgba(98, 138, 177, 0.98);
 }
 
 .command {
@@ -1602,6 +1600,12 @@ section {
     margin-bottom: var(--spacing-xl);
     color: var(--accent);
     text-align: center;
+}
+
+.contact-form .cta-btn.primary.large {
+    width: 75%;
+    justify-content: center;
+    margin-left: calc(25%/2);
 }
 
 .form-row {
